<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.example.apple.test.LoginActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:contentDescription="@android:string/unknownName"
            android:src="@drawable/logo"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:labelFor="@+id/editTextFullName"
            android:text="@string/full_name"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="133dp" />

        <EditText
            android:id="@+id/editTextFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="152dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:capitalize="none"
            android:labelFor="@id/editTextCode"
            android:text="@string/code"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="232dp" />

        <EditText
            android:id="@+id/editTextCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:capitalize="none"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="267dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="351dp"
            android:onClick="onLogin"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
